prometheus/node-exporter-daemonset.yml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: prometheus-node-exporter
  namespace: monitoring
  labels:
    app: prometheus
    component: node-exporter
spec:
  selector:
    matchLabels:
      app: prometheus
      component: node-exporter
  template:
    metadata:
      labels:
        app: prometheus
        component: node-exporter
    spec:
      containers:
        - name: prometheus-node-exporter
          image: prom/node-exporter:v0.14.0
          ports:
            - name: prom-node-exp
              containerPort: 9100
              hostPort: 9100
      hostNetwork: true
      hostPID: true
